# covid-warn

./: .coverage  config.py  covid-rules.ipynb  covid-tpot.ipynb  docker-compose.yml  requirements.txt  setup.cfg  start.sh
.circleci/: config.yml
.ipynb_checkpoints/: covid-rules-checkpoint.ipynb  covid-tpot-checkpoint.ipynb
covidWarnApp/: __init__.py  commands.py  model.py
covidWarnApp/Errors/: CovidWarnException.py  ParamsError.py  ProcessorError.py
covidWarnApp/api/: __init__.py  calc_process.py  home_info.py  params.py  processor.py  utils.py
covidWarnApp/templates/: home.html
mockCovidServer/: Dockerfile
tests/: conftest.py  test_homeinfo.py
