[metadata]
name = covidWarnApp
version = 0.0.0
license = T2
description = CovidWarn Service

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    covidWarnApp
